Add integration test suite for the consumer / producer flow